Open PR instead of pushing directly on update

--- a/.github/workflows/update-formula.yml
+++ b/.github/workflows/update-formula.yml
@@ -15,6 +15,7 @@ on:
 
 permissions:
   contents: write
+  pull-requests: write
 
 jobs:
   update-formula:
@@ -59,12 +60,20 @@ jobs:
           echo "Updated ${formula_file}:"
           cat "${formula_file}"
 
-      - name: Commit and push
+      - name: Create pull request
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           git diff --quiet && { echo "No changes to commit."; exit 0; }
 
+          branch="update-${{ inputs.formula }}-${{ inputs.version }}"
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          git checkout -b "${branch}"
           git add Formula/
           git commit -m "Update ${{ inputs.formula }} to ${{ inputs.version }}"
-          git push
+          git push -u origin "${branch}"
+
+          gh pr create \
+            --title "Update ${{ inputs.formula }} to ${{ inputs.version }}" \
+            --body "Automated formula update for ${{ inputs.formula }} ${{ inputs.version }}."
